--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,31 @@
 	text-align: center;
 }
 
-.page-container {
-	width: 100%;
-	height: 100vh;
-}
-.page-container.about {
-	background-image: url("assets/backgrounds/01.jpg");
-}
-.page-container.home {
-	background-image: url("assets/backgrounds/3907391.jpg");
+.back-main-pink {
 	background-size: cover;
+	background: linear-gradient(
+		to bottom,
+		rgb(255, 239, 186),
+		rgb(255, 255, 255),
+		white
+	);
 }
-.page-container.services {
-	background-image: url("assets/backgrounds/03.jpg");
+
+.back-main-purple {
+	background-size: cover;
+	background: linear-gradient(
+		to top,
+		rgb(217, 167, 199),
+		rgb(255, 252, 220),
+		white
+	);
+}
+
+.back-main-blue {
+	background: linear-gradient(
+		to top,
+		rgb(28, 146, 210),
+		rgb(242, 252, 254),
+		white
+	);
 }
