--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.headroom-wrapper {
+	position: absolute;
+}
+
+.headroom {
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	position: fixed !important;
+	@apply transition-all duration-500;
+}
+
+.headroom--scrolled {
+	@apply bg-indigo-700;
+}
+
+.headroom--unpinned {
+	position: fixed;
+	transform: translateY(-100px);
+	@apply bg-indigo-700;
+}
